// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectableText Component > should match snapshot with add comment button visible 1`] = `
<DocumentFragment>
  <span
    class="relative  "
  >
    This is selectable text
    <div
      class="absolute hover:bg-[#F3F3F3] z-10 flex gap-2 cursor-pointer items-center top-full left-0 mt-1 px-4 py-2 w-[160px] shadow-lg border h-[40px] rounded-[100px] bg-white"
      style="bottom: -50px;"
    >
      <div
        class="w-6 h-6 pt-1"
        data-testid="add-comment-icon"
      />
      <span
        class="text-sm font-medium whitespace-nowrap"
      >
        Add Comment
      </span>
    </div>
  </span>
</DocumentFragment>
`;

exports[`SelectableText Component > should match snapshot with basic segment 1`] = `
<DocumentFragment>
  <span
    class="relative  "
  >
    This is selectable text
  </span>
</DocumentFragment>
`;

exports[`SelectableText Component > should match snapshot with comment addition dialog open 1`] = `
<DocumentFragment>
  <span
    class="relative  "
  >
    This is selectable text
    <div
      class="fixed z-50"
      style="top: 8px; left: 16px; opacity: 1;"
    >
      <div
        data-testid="comment-addition-dialog"
      >
        <button
          data-testid="dialog-cancel"
        >
          Cancel
        </button>
        <button
          data-testid="dialog-submit"
        >
          Submit
        </button>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
